Added order details page + changed deprecated code to newer versions + fixed some minor bugs